Update video url from wix index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <div class="hero-section">
         <video class="background-video" autoplay loop muted playsinline>
-            <source src="camcrew-hero-section-video.mp4" type="video/mp4">
+            <source src="https://video.wixstatic.com/video/e78e78_aa70e916e03446b5b0d53dfe3a1bb0bc/1080p/mp4/file.mp4" type="video/mp4">
         </video>
         
         <div class="branding">
@@ -165,3 +165,4 @@
 </body>
 
 </html>
+
